--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Your browser does not support the audio element. (mp3)
       <ul class="list-group">
       <li class="list-group-item"><p> Do you have a song request? <a style="color: black;"  href="#" data-toggle="modal" data-target="#myModal">Send it here!</a> <span class="label label-default">New</span></p><li> 
       <li class="list-group-item"><p> New cs:go surf server added <span style="position: absolute; right: 15px;" class="label label-default">03.06.2015</span></p></li>
-      <li class="list-group-item"><p> Rein ranked up to LE <span style="position: absolute; right: 15px;" style="position: right;" class="label label-default">02.06.2015</span></p></li></li>
+      <li class="list-group-item"><p> Monster summer sale <span style="position: absolute; right: 15px;" style="position: right;" class="label label-default">02.06.2015</span></p></li></li>
       <li class="list-group-item"><p> Website will be down for maintenance <span style="position: absolute; right: 15px;" class="label label-default">01.06.2015</span></p></li>
       <li class="list-group-item"><p> Teamspeak server now up <span style="position: absolute; right: 15px;" class="label label-default">28.05.2015</span></p></li>
       <li class="list-group-item"><p> Join our steam group <span style="position: absolute; right: 15px;" class="label label-default">23.05.2015</span></p></li>
@@ -238,11 +238,7 @@ Your browser does not support the audio element. (mp3)
 </div>
 </div>
 
-<div class="alert alert-info">
-<h1>Steam signature generator</h1>
-<p><strong>SteamSignature</strong> allows you to generate a <strong>dynamic signature</strong> which shows your Steam status, current level, XP completion and more using your SteamID -
-Every 15 min, it will automatically update with your <strong>Steam profile information</strong>.</p>
-</div>
+
 
 </body> 
 </html>
