--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ top: -693px;
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Teamspeak</a></li>
+        <li><a href="http://villebanditene.github.io/teamspeak">Teamspeak</a></li>
         <li><a href="#">About</a></li> 
         <li><a href="#">Members</a></li> 
         <li class="dropdown">
